--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
         <div class="principale">
             <div class="logo">
@@ -22,12 +23,28 @@
                 <li>
                     <a href="page3.html">Mon entourage</a>
                 </li>
+                <li>
+                    <a href="formulaire.html">Formulaire</a>
+                </li>
             </ul>
         </div>
         <div class="titre">
             <h1>MON BLOG</h1>
         </div>
-
     </header>
+
+    <main>
+    
+    </main>
+
+    <footer>
+        <div class="container">
+            <h1>Mode Sombre</h1>
+            <label for="darkModeToggle">Mode Sombre</label>
+            <input type="checkbox" id="darkModeToggle">
+        </div>
+    </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
