--- a/page3.html
+++ b/page3.html
@@ -8,6 +8,26 @@
 </head>
 <body>
     <header>
+        <div class="principale">
+            <div class="logo">
+                <a href="logo">KV</a>
+            </div>
+            <ul>
+                <li class="active">
+                    <a href="index.html">Accueil</a>
+                </li>
+                <li>
+                    <a href="page2.html">À propos de moi</a>
+                </li>
+                <li>
+                    <a href="page3.html">Mon entourage</a>
+                </li>
+                <li>
+                    <a href="formulaire.html">Formulaire</a>
+                </li>
+            </ul>
+        </div>
+
         <section class="entourage">
             <h2 class="section-title2">
                 Mes amis
@@ -18,38 +38,48 @@
                         <p class="photo-name">Ici c'est Candice</p>
                         <p class="photo-description">On s'est connu au lycée</p>
                       </div>
-                    </a>
-                    <a class="friends pauline">
-                        <div class="details1">
-                            <p class="photo-name">Ici c'est Pauline</p>
-                            <p class="photo-description">On s'est connu au lycée</p>
-                        </div>
-                        </a>
-                        <a class="friends solene">
-                        <div class="details2">
+                </a>
+                <a class="friends pauline">
+                    <div class="details1">
+                        <p class="photo-name">Ici c'est Pauline</p>
+                        <p class="photo-description">On s'est connu au lycée</p>
+                    </div>
+                </a>
+                <a class="friends solene">
+                    <div class="details2">
                         <p class="photo-name">Ici c'est Solène</p>
                         <p class="photo-description">On s'est connu au lycée</p>
-                        </div>
-                        <a class="friends nehemie">
-                            <div class="details3">
-                            <p class="photo-name">Ici c'est Nehemie</p>
-                            <p class="photo-description">On s'est connu à l'église</p>
-                            </div>
-                            <a class="friends laura">
-                                <div class="details4">
-                                <p class="photo-name">Ici c'est Laura</p>
-                                <p class="photo-description">Ma soeur</p>
-                                </div>
-                                <a class="friends lili">
-                                    <div class="details5">
-                                        <p class="photo-name">Ici c'est lili, mon chat décédé</p>
-                                        <p class="photo-description">2013 - 2023</p>
-                                      </div>
+                    </div>
+                </a>
+                <a class="friends nehemie">
+                    <div class="details3">
+                        <p class="photo-name">Ici c'est Nehemie</p>
+                        <p class="photo-description">On s'est connu à l'église</p>
+                    </div>
+                </a>
+                <a class="friends laura">
+                    <div class="details4">
+                        <p class="photo-name">Ici c'est Laura</p>
+                        <p class="photo-description">Ma soeur</p>
+                    </div>
+                </a>
+                <a class="friends lili">
+                    <div class="details5">
+                        <p class="photo-name">Ici c'est lili, mon chat décédé</p>
+                        <p class="photo-description">2013 - 2023</p>
+                    </div>
                 </a>
             </div>
+
+            <div class="container">
+                <h1>Mode Sombre</h1>
+                <label for="darkModeToggle">Mode Sombre</label>
+                <input type="checkbox" id="darkModeToggle">
+            </div>
+            
         </section>
     </header>
+
+    <script src="main.js"></script>
 </body>
 </html>
-
-<a href=""></a>
